[tool.poetry]
name = "xlsx-merger"
version = "1.0.0"
description = "merge multiple xlsx to one file."
authors = ["Ryuuji Yoshimoto <ryuuji@calil.jp>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
openpyxl = "^3.0.7"
click = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
